Project

General

Profile

Actions

Bug #12829

closed

Compile error on cygwin (io.c)

Bug #12829: Compile error on cygwin (io.c)

Added by duerst (Martin Dürst) almost 10 years ago. Updated almost 10 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.4.0dev (2016-10-09 trunk 56382) [x86_64-cygwin]
[ruby-core:77550]

Description

I get the following error when trying to compile the latest version of Ruby trunk on cygwin:

Thread model: posix
gcc version 5.4.0 (GCC)
compiling io.c
io.c: In function ‘prep_io’:
io.c:7378:4: error: ‘rb_io_t {aka struct rb_io_t}’ has no member named ‘fmode’
fp->fmode |= FMODE_BINMODE;
^
io.c: At top level:
cc1: warning: unrecognized command line option ‘-Wno-self-assign’
cc1: warning: unrecognized command line option ‘-Wno-constant-logical-operand’
cc1: warning: unrecognized command line option ‘-Wno-parentheses-equality’
cc1: warning: unrecognized command line option ‘-Wno-tautological-compare’
make: *** [Makefile:365: io.o] Error 1
compiling io.c
io.c: In function ‘prep_io’:
io.c:7378:4: error: ‘rb_io_t {aka struct rb_io_t}’ has no member named ‘fmode’
fp->fmode |= FMODE_BINMODE;
^
io.c: At top level:
cc1: warning: unrecognized command line option ‘-Wno-self-assign’
cc1: warning: unrecognized command line option ‘-Wno-constant-logical-operand’
cc1: warning: unrecognized command line option ‘-Wno-parentheses-equality’
cc1: warning: unrecognized command line option ‘-Wno-tautological-compare’
make: *** [Makefile:365: io.o] Error 1

Actions

Also available in: PDF Atom